--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link text-white" href="#contactos">Contactos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white fst-italic fw-bold" href="juego.html">Juego</a>
+                    <a class="nav-link fst-italic fw-bold text-warning" href="juego.html">Juego</a>
                   </li>
                 </ul>
               </div>
@@ -446,7 +446,7 @@
         </div>
       </section>
       
-      <section class="d-flex p-2 me-md-3">
+      <section class="d-flex p-2 me-md-3 justify-content-center">
         <div class="footer-basic">
           <footer>
               <ul class="list-inline">
